--- a/src/assets/sass/themes/default/_global.scss
+++ b/src/assets/sass/themes/default/_global.scss
@@ -1,3 +1,7 @@
+h1 {
+    font-size: 28px;
+}
+
 a {
     color: $link-color;
 }
@@ -9,7 +13,9 @@ ul {
 }
 
 #main-section {
-    margin: 0 50px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 50px;
 }
 
 .page-heading {
