Dot things almost working

--- a/src/js/app/templates/list.item.details.hbs
+++ b/src/js/app/templates/list.item.details.hbs
@@ -7,7 +7,7 @@
 </div>
 <div class="list-item-row">
     <span class="label phone-label">Phone: </span>
-    <span class="phone">{{ phone }}</span>
+    <span class="phone fn-edit-phone">{{ phone }}</span>
 </div>
 <div class="list-item-row">
     <span class="label email-label">Email: </span>
