--- a/src/assets/sass/themes/default/_list-item.scss
+++ b/src/assets/sass/themes/default/_list-item.scss
@@ -1,9 +1,14 @@
 .list-item {
-    padding: 15px;
+    padding: 15px 15px 15px 30px;
+    border-bottom: 3px solid #fff;
 
     &:hover {
         background-color: #ddd;
         cursor: pointer;
+    }
+
+    &.active {
+        background-color: #ddd;
     }
 
     .photo {
