--- a/src/js/app/templates/list.item.details.hbs
+++ b/src/js/app/templates/list.item.details.hbs
@@ -1,6 +1,12 @@
+<div class="contact-details-overlay hidden fn-contact-details-overlay">
+    <h2>Are you sure you want to remove this contact?</h2>
+    <button class="contact-remove-confirm fn-contact-remove-confirm">Remove it</button>
+    <button class="contact-remove-cancel fn-contact-remove-cancel">Cancel</button>
+</div>
 <div class="list-item-row">
-    <button class="contact-edit-button fn-contact-edit">Edit contact</button>
-    <button class="contact-save-button fn-contact-save hidden">Save contact</button>
+    <button class="contact-remove-button fn-contact-remove">Remove</button>
+    <button class="contact-edit-button fn-contact-edit">Edit</button>
+    <button class="contact-save-button fn-contact-save hidden">Save</button>
     <button class="contact-cancel-button fn-contact-cancel hidden">Cancel</button>
     <div class="photo-wrapper fn-edit-photo">
         <img class="photo" src="assets/imgs/contacts/{{ photo }}" alt="{{ firstName }}">
