Implemented contact removal.

--- a/src/js/app-out/templates/list.item.hbs
+++ b/src/js/app-out/templates/list.item.hbs
@@ -1,7 +1,7 @@
-<li class="list-item fn-list-item">
+<div class="list-item-content fn-list-item">
     <div class="list-item-row">
         <img class="photo" src="assets/imgs/contacts/{{ photo }}" alt="{{ firstName }}">
-        <span class="name">
+    <span class="name">
         <span class="first-name">{{ firstName }}</span>
         <span class="last-name">{{ lastName }}</span>
     </span>
@@ -14,4 +14,4 @@
         <span class="label email-label">Email: </span>
         <a href="mailto:{{ email }}" class="email">{{ email }}</a>
     </div>
-</li>
+</div>
