--- a/src/js/app/templates/list.item.details.hbs
+++ b/src/js/app/templates/list.item.details.hbs
@@ -17,8 +17,8 @@
         <span class="last-name">{{ lastName }}</span>
     </span>
     <div class="name-edit-inputs">
-        <input type="text" title="First Name" class="fn-edit-input hidden" value="{{ firstName }}" data-field="firstName">
-        <input type="text" title="Last Name" class="fn-edit-input hidden" value="{{ lastName }}" data-field="lastName">
+        <input type="text" title="First Name" class="fn-edit-input hidden" value="{{ firstName }}" data-field="firstName" placeholder="First Name">
+        <input type="text" title="Last Name" class="fn-edit-input hidden" value="{{ lastName }}" data-field="lastName" placeholder="Last Name">
     </div>
 </div>
 <div class="list-item-row">
