--- a/src/assets/sass/themes/default/_list.scss
+++ b/src/assets/sass/themes/default/_list.scss
@@ -9,12 +9,41 @@
     width: 60%;
 }
 
-.contacts-list {
+.contacts-list-wrapper {
+    position: relative;
     float: right;
     width: 35%;
-    height: 90%;
+    height: 88%;
     margin-bottom: 30px;
-    overflow-y: scroll;
+    padding: 0 10px 60px;
     border-left: 1px solid #ddd;
-    padding: 0 10px;
+}
+
+.contacts-list {
+    overflow-y: scroll;
+    height: 100%;
+}
+
+.add-new-contact {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin-top: 10px;
+    padding: 0 10px 0 30px;
+    line-height: 40px;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:before {
+        content: '';
+        position: absolute;
+        left: 10px;
+        top: 50%;
+        width: 13px;
+        height: 13px;
+        margin-top: -6px;
+        background: url('../imgs/add.png') center right no-repeat;
+    }
+
+
 }
