--- a/src/js/app/templates/list.view.hbs
+++ b/src/js/app/templates/list.view.hbs
@@ -3,7 +3,10 @@
 
     <div class="contacts-wrapper">
         <div class="contact-details fn-contact-details"></div>
-        <ul class="contacts-list fn-contacts-list"></ul>
+        <div class="contacts-list-wrapper">
+            <ul class="contacts-list fn-contacts-list"></ul>
+            <button class="add-new-contact fn-add-new-contact">Add new contact</button>
+        </div>
     </div>
 
     <a href="#" data-url="/">Go back to Home</a>
