--- a/src/assets/sass/themes/default/_list-item-details.scss
+++ b/src/assets/sass/themes/default/_list-item-details.scss
@@ -121,6 +121,7 @@
 
     .photo {
         width: 300px;
+        height: 300px;
     }
 
     .photo-upload {
@@ -132,7 +133,7 @@
 
     .label {
         display: inline-block;
-        width: 50px;
+        width: 60px;
         padding-right: 5px;
         color: #898989;
     }
@@ -163,11 +164,11 @@
 
     .bio.data-span {
         float: left;
-        max-width: calc(100% - 65px);
+        max-width: calc(100% - 75px);
     }
 
     .bio-textarea {
-        width: calc(100% - 65px);
+        width: calc(100% - 75px);
         height: 200px;
         vertical-align: top;
     }
