--- a/src/js/app/templates/list.item.hbs
+++ b/src/js/app/templates/list.item.hbs
@@ -1,17 +1,17 @@
 <div class="list-item-content fn-list-item">
     <div class="list-item-row">
-        <img class="photo" src="assets/imgs/contacts/{{ photo }}" alt="{{ firstName }}">
+        <img class="photo" src="{{ photo }}" alt="{{ firstName }}">
     <span class="name">
         <span class="first-name">{{ firstName }}</span>
         <span class="last-name">{{ lastName }}</span>
     </span>
     </div>
     <div class="list-item-row">
-        <span class="label phone-label">Phone: </span>
-        <span class="phone">{{ phone }}</span>
+        <span class="label bdate-label">Birthday: </span>
+        <span class="bdate">{{ bdate }}</span>
     </div>
     <div class="list-item-row">
-        <span class="label email-label">Email: </span>
-        <a href="mailto:{{ email }}" class="email">{{ email }}</a>
+        <span class="label site-label">Website: </span>
+        <a href="{{ site }}" class="site">{{ site }}</a>
     </div>
 </div>
